force-app/main/default/objects/Scoring_Metric__mdt/Scoring_Metric__mdt.object-meta.xml
<CustomObject>
    <label>Scoring Metric</label>
    <pluralLabel>Scoring Metrics</pluralLabel>
    <description>added from sfdx plugin</description>
</CustomObject>