force-app/main/default/objects/Scoring_Metric__mdt/fields/Based_on_Service_Field__c.field-meta.xml
<CustomField>
    <label>Based on Service Field</label>
    <type>Checkbox</type>
    <fullName>Based_on_Service_Field__c</fullName>
    <defaultValue>false</defaultValue>
</CustomField>