force-app/main/default/objects/Scoring_Metric__mdt/fields/Calculate_User_Level__c.field-meta.xml
<CustomField>
    <label>Calculate User-Level</label>
    <type>Checkbox</type>
    <fullName>Calculate_User_Level__c</fullName>
    <defaultValue>false</defaultValue>
</CustomField>