force-app/main/default/objects/Scoring_Metric__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <label>Description</label>
    <type>LongTextArea</type>
    <fullName>Description__c</fullName>
    <length>131072</length>
</CustomField>