force-app/main/default/objects/Scoring_Metric__mdt/fields/Org_Level__c.field-meta.xml
<CustomField>
    <fullName>Org_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Org Level</label>
    <type>Checkbox</type>
</CustomField>