force-app/main/default/objects/Scoring_Metric__mdt/fields/Org_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Org_Maximum__c</fullName>
    <label>Org Maximum</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>