force-app/main/default/objects/Scoring_Metric__mdt/fields/Org_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Org_Minimum__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Org Minimum</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>