force-app/main/default/objects/Scoring_Metric__mdt/fields/Org_SOQL_Query__c.field-meta.xml
<CustomField>
    <fullName>Org_SOQL_Query__c</fullName>
    <label>Org SOQL Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>