force-app/main/default/objects/Scoring_Metric__mdt/fields/Service_Level_SOQL_Query__c.field-meta.xml
<CustomField>
    <label>Service-Level SOQL Query</label>
    <type>LongTextArea</type>
    <fullName>Service_Level_SOQL_Query__c</fullName>
    <length>131072</length>
</CustomField>