force-app/main/default/objects/Scoring_Metric__mdt/fields/User_ID__c.field-meta.xml
<CustomField>
    <label>User ID</label>
    <type>Text</type>
    <fullName>User_ID__c</fullName>
    <length>18</length>
</CustomField>