force-app/main/default/objects/Scoring_Metric__mdt/fields/Weighting__c.field-meta.xml
<CustomField>
    <fullName>Weighting__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Weighting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>