force-app/main/default/objects/Scoring_Metric__mdt/fields/Weightning__c.field-meta.xml
<CustomField>
    <label>Weightning</label>
    <type>Number</type>
    <fullName>Weighting__c</fullName>
    <scale>0</scale>
    <precision>18</precision>
    <defaultValue>5</defaultValue>

</CustomField>