force-app/main/default/objects/Scoring_Metric__mdt/validationRules/Org_Level_Cant_Have_UserID.validationRule-meta.xml
<ValidationRule>
    <fullName>Org_Level_Cant_Have_UserID</fullName>
    <active>true</active>
    <errorConditionFormula>AND (Org_Level__c,  NOT(ISBLANK(User_ID__c)))</errorConditionFormula>
    <errorMessage>Org-level records can&apos;t have a user ID</errorMessage>
</ValidationRule>